# my-first-ai-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
core/: api.py  models.py  services.py
core/migrations/: 0001_initial.py
