[project]
name = "my-first-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django",
    "django-ninja",
    "anthropic",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "DJ"] # General, Imports, and Django-specific rules